<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_gray">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvOffer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/customToolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.app.shimmertextview.ShimmerTextView
                android:id="@+id/tvOffer1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_offer_title"
                android:textSize="24sp"
                app:shimmer_colored="true"
                app:shimmer_base_color="@color/blue"
                app:shimmer_duration="3000"
                app:shimmer_direction="left_to_right"
                app:shimmer_highlight_color="@color/white"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvOffer1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/text_offer_subtitle"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/blue"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvOffer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cvOffer1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.app.shimmertextview.ShimmerTextView
                android:id="@+id/tvOffer2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_friday"
                android:textSize="24sp"
                app:shimmer_colored="true"
                app:shimmer_base_color="@color/yellow"
                app:shimmer_duration="3000"
                app:shimmer_direction="left_to_right"
                app:shimmer_highlight_color="@color/white"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvOffer2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/text_bogo"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/yellow"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvOffer3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cvOffer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.app.shimmertextview.ShimmerTextView
                android:id="@+id/tvOffer3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_buy_4"
                android:textSize="24sp"
                app:shimmer_colored="true"
                app:shimmer_base_color="@color/maroon"
                app:shimmer_duration="3000"
                app:shimmer_direction="left_to_right"
                app:shimmer_highlight_color="@color/white"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvOffer3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/text_get_1"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/maroon"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvOffer5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cvOffer3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.app.shimmertextview.ShimmerTextView
                android:id="@+id/tvOffer5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_10_percent"
                android:textSize="24sp"
                app:shimmer_colored="true"
                app:shimmer_base_color="@color/coffee"
                app:shimmer_duration="3000"
                app:shimmer_direction="bottom_to_top"
                app:shimmer_highlight_color="@color/white"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvOffer5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/text_discount_salty"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/coffee"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvOffer6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cvOffer5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.app.shimmertextview.ShimmerTextView
                android:id="@+id/tvOffer6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_happy_hour"
                android:textSize="24sp"
                app:shimmer_colored="true"
                app:shimmer_base_color="@color/purple_700"
                app:shimmer_duration="3000"
                app:shimmer_direction="bottom_to_top"
                app:shimmer_highlight_color="@color/white"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvOffer6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/text_get_free_delivery"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/purple_700"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvOffer7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cvOffer6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.app.shimmertextview.ShimmerTextView
                android:id="@+id/tvOffer7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_50_percent"
                android:textSize="24sp"
                app:shimmer_colored="true"
                app:shimmer_base_color="@color/z_black"
                app:shimmer_duration="3000"
                app:shimmer_direction="right_to_left"
                app:shimmer_highlight_color="@color/white"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvOffer7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/text_free_cheesy_garlic_bread"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/z_black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <include layout="@layout/custom_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/customToolBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>